# evolution-simulator-project

./: .gitignore  README.md  pyproject.toml
examples/: convert_to_fits.py  plot_data.py  run_sim.py
src/evolution_simulator/: config.py  dna.py  logger.py  main.py  organism.py  species_library.py  world.py
