# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution_simulator"
version = "0.1.0"
authors = [
    # Replace with your name and email
    { name="Nicol Omodei", email="nicola.omodei@gmail.com" }, 
]
description = "A configurable 2D evolutionary ecosystem simulation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "perlin-noise",
]

[project.urls]
Homepage = "https://github.com/omodei/evolution-simulator-project" 